June 2023 8.4
  - Duo 2FA: switch to frameless login and support for universal prompt
  - Docker: support for linux/arm64 (Apple Silicon)
  - LAM Pro:
   -> PPolicy: support to edit existing policies that are not based on "device" (but e.g. on "person")
  - Fixed bugs:
   -> Selecting entries from a filtered list selection did not work (223)
   -> Lamdaemon: support to delete home directories if "rm" command is aliased to "rm -i"


24.03.2023 8.3
  - PHP 8.2 compatibility
  - Windows users: display name can be hidden in server profile
  - LDAP export: sort entries by DN
  - Security: you can hide login error details in LAM's main configuration
  - 2 factor authentication: allow to remember device (must be activated in server/self service profile)
  - RPM package cleanup
  - LAM Pro:
   -> Custom scripts: new wildcard INFO.lamLoginDn for current user
   -> PPolicy: allow password policy for groups and hosts
   -> Simple security object: allow for hosts
   -> Apache Guacamole: added ssh, telnet and kubernetes protocols
  - Fixed bugs:
   -> SameSite value for cookies changed to Lax to not break Okta/OpenID
   -> Unix users: file upload did not always set memberUid in group (218)

13.12.2022 8.2
  - PHP 7.4 required
  - Usability improvements
  - DHCP: added "authoritative" option and extra DHCP options + statements
  - LAM Pro:
   -> Group of (unique) names/members, Apache Guacamole: support "seeAlso" attribute (hidden by default in server profile)
   -> Windows: self service: users with expired passwords or forced password change can update their password (requires bind user to be used for all operations)


22.09.2022 8.1
  - Allow hostObject for groups and ":" in values
  - Docker: added Let's Encrypt CA certificates
  - LAM Pro:
   -> Added support for simpleSecurityObject
   -> Added support for Apache Guacamole
   -> Group of Names: save last selected account type for new members/owners (170)
  - Fixed bugs: